# jaqpotpy-inference

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  application.py  local-requirements.txt  main.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/workflows/: build.yml  publish.yml  python-app.yml
app/: application.py
etc/: openapi-generate.sh
src/: s3_client.py
src/api/: predict.py
src/api/openapi/: __init__.py  api_client.py  rest.py
src/config/: config.py
src/entities/: __init__.py  algorithm.py  dataentry.py  dataset.py  entryid.py  error_report.py  feature.py  featureinfo.py  jaqpot_base.py  meta.py  model.py  parameter.py  prediction_request.py  prediction_torch.py  task.py
src/handlers/: predict.py  predict_graph.py  predict_pyg.py  predict_sequence.py  predict_sklearn.py  predict_sklearn_onnx.py  predict_torch.py  predict_torch_geometric.py  predict_torch_onnx.py  predict_torch_sequence.py  prediction_handler_torch.py
src/handlers/prediction_handlers_torch/: binary_fc_predict.py  binary_graph_predict.py  binary_graph_with_external_predict.py  multiclass_fc_predict.py  multiclass_graph_predict.py  regression_fc_predict.py  (+3 more)
src/helpers/: base64_utils.py  dataset_utils.py  doa_calc.py  image_utils.py  json_to_predreq.py  model_decoder.py  model_loader.py  model_utils.py  predict_methods.py  recreate_featurizer.py  recreate_preprocessor  recreate_preprocessor.py  s3_client.py  torch_utils.py  utils.py
src/loggers/: logger.py
src/services/: predict_service.py
(+32 files in other folders)
